--- a/activity/index.html
+++ b/activity/index.html
@@ -32,32 +32,44 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
         </li>
         <li class="menu-item">
           <a href="/">
-            <p><strong>Home</strong></p>
+            <p>
+              <strong>Home</strong>
+            </p>
           </a>
         </li>
         <li class="menu-item">
           <a href="/release">
-            <p><strong>Releases</strong></p>
+            <p>
+              <strong>Releases</strong>
+            </p>
           </a>
         </li>
         <li class="menu-item">
           <a href="/activity">
-            <p><strong>Activities</strong></p>
+            <p>
+              <strong>Activities</strong>
+            </p>
           </a>
         </li>
         <li class="menu-item">
           <a href="/song_usage_terms">
-            <p><strong>Terms of Use</strong></p>
+            <p>
+              <strong>Terms of Use</strong>
+            </p>
           </a>
         </li>
         <li class="menu-item">
           <a href="/about_me">
-            <p><strong>About Me</strong></p>
+            <p>
+              <strong>About Me</strong>
+            </p>
           </a>
         </li>
         <li class="menu-item">
           <a href="/contacts">
-            <p><strong>My Contacts</strong></p>
+            <p>
+              <strong>My Contacts</strong>
+            </p>
           </a>
         </li>
       </ul>
@@ -70,7 +82,7 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
         </li>
         <li class="social">
           <a href="https://x.com/t404_null">
-            <p>&Xopf;</p>
+            <p class="nf-icons">&#xe8e9;</p>
           </a>
         </li>
         <li class="social">
@@ -119,56 +131,68 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
       <div class="dropdown">
         <div class="dropdown-menu">
           <a href="/">
-            <p><strong>Home</strong></p>
+            <p>
+              <strong>Home</strong>
+            </p>
           </a>
           <a href="/release">
-            <p><strong>Releases</strong></p>
+            <p>
+              <strong>Releases</strong>
+            </p>
           </a>
           <a href="/activity">
-            <p><strong>Activities</strong></p>
+            <p>
+              <strong>Activities</strong>
+            </p>
           </a>
           <a href="/song_usage_terms">
-            <p><strong>Terms of Use</strong></p>
+            <p>
+              <strong>Terms of Use</strong>
+            </p>
           </a>
           <a href="/about_me">
-            <p><strong>About Me</strong></p>
+            <p>
+              <strong>About Me</strong>
+            </p>
           </a>
           <a href="/contacts">
-            <p><strong>My Contacts</strong></p>
+            <p>
+              <strong>My Contacts</strong>
+            </p>
           </a>
         </div>
         <hr class="dropdown-menu" />
         <div class="dropdown-social">
           <p>
             <a href="https://youtube.com/@t404_null">
-              <span class="icons nf-icons">&#xf16a;</span
-              ><strong class="social-name">Youtube</strong>
+              <span class="icons nf-icons">&#xf16a;</span>
+              <strong class="social-name">Youtube</strong>
             </a>
             <a href="https://x.com/t404_null">
-              <span class="icons"> &Xopf; </span
-              ><strong class="social-name">X/Twitter</strong>
+              <span class="icons nf-icons">&#xe8e9;</span>
+              <strong class="social-name">X/Twitter</strong>
             </a>
             <a href="https://t404null.bandcamp.com/">
-              <span class="icons nf-icons">&#xf2d5;</span
-              ><strong class="social-name">Bandcamp</strong>
+              <span class="icons nf-icons">&#xf2d5;</span>
+              <strong class="social-name">Bandcamp</strong>
             </a>
             <a href="https://open.spotify.com/artist/7jNOPuWk28EUX69mrp4ITL/">
-              <span class="icons nf-icons">&#xf04c7;</span
-              ><strong class="social-name">Spotify</strong>
+              <span class="icons nf-icons">&#xf04c7;</span>
+              <strong class="social-name">Spotify</strong>
             </a>
           </p>
           <p>
             <a href="https://music.apple.com/artist/t404-null/1583561849">
-              <span class="icons nf-icons">&#xf2eb;</span
-              ><strong class="social-name">Apple Music</strong>
+              <span class="icons nf-icons">&#xf2eb;</span>
+              <strong class="social-name">Apple Music</strong>
             </a>
             <a href="https://soundcloud.com/t404null">
-              <span class="icons nf-icons">&#xf1be;</span
-              ><strong class="social-name">SoundCloud</strong>
+              <span class="icons nf-icons">&#xf1be;</span>
+              <strong class="social-name">SoundCloud</strong>
             </a>
             <a href="https://discord.gg/YJmkAFbKFX">
-              <span class="icons nf-icons">&#xf1ff;</span
-              ><strong class="social-name">Discord</strong>
+              <span class="icons nf-icons">&#xf1ff;</span>
+              <strong class="social-name">Discord</strong>
             </a>
           </p>
         </div>
