--- a/contacts/index.html
+++ b/contacts/index.html
@@ -13,7 +13,10 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
       <ul class="menu">
         <li>
           <a href="/">
-            <img src="https://cdn.glitch.global/f594d6b7-e72e-477c-b5cb-d71abbd39f44/logo.png?v=1716494259675" alt="t404:null" />
+            <img
+              src="https://cdn.glitch.global/f594d6b7-e72e-477c-b5cb-d71abbd39f44/logo.png?v=1716494259675"
+              alt="t404:null"
+            />
           </a>
         </li>
         <li>
@@ -71,7 +74,7 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
         </li>
         <li class="social">
           <a href="https://x.com/t404_null">
-            <p>&Xopf;</p>
+            <p class="nf-icons">&#xe8e9;</p>
           </a>
         </li>
         <li class="social">
@@ -100,8 +103,11 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
           </a>
         </li>
         <li>
-          <button class="burger" onclick="this.classList.toggle('open');
-                                document.querySelector('.dropdown').classList.toggle('dropdown-open');">
+          <button
+            class="burger"
+            onclick="this.classList.toggle('open');
+                                document.querySelector('.dropdown').classList.toggle('dropdown-open');"
+          >
             <div id="hamburger">
               <span></span>
               <span></span>
@@ -155,7 +161,7 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
               <strong class="social-name">Youtube</strong>
             </a>
             <a href="https://x.com/t404_null">
-              <span class="icons"> &Xopf; </span>
+              <span class="icons nf-icons">&#xe8e9;</span>
               <strong class="social-name">X/Twitter</strong>
             </a>
             <a href="https://t404null.bandcamp.com/">
