--- a/about_me/index.html
+++ b/about_me/index.html
@@ -82,7 +82,7 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
         </li>
         <li class="social">
           <a href="https://x.com/t404_null">
-            <p>&Xopf;</p>
+            <p class="nf-icons">&#xe8e9;</p>
           </a>
         </li>
         <li class="social">
@@ -169,7 +169,7 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
               <strong class="social-name">Youtube</strong>
             </a>
             <a href="https://x.com/t404_null">
-              <span class="icons"> &Xopf; </span>
+              <span class="icons nf-icons">&#xe8e9;</span>
               <strong class="social-name">X/Twitter</strong>
             </a>
             <a href="https://t404null.bandcamp.com/">
