--- a/release/A_Lake_With_Endless_Stars/index.html
+++ b/release/A_Lake_With_Endless_Stars/index.html
@@ -84,7 +84,7 @@ and more...">
         </li>
         <li class="social">
           <a href="https://x.com/t404_null">
-            <p>&Xopf;</p>
+            <p class="nf-icons">&#xe8e9;</p>
           </a>
         </li>
         <li class="social">
@@ -171,7 +171,7 @@ and more...">
               <strong class="social-name">Youtube</strong>
             </a>
             <a href="https://x.com/t404_null">
-              <span class="icons"> &Xopf; </span>
+              <span class="icons nf-icons">&#xe8e9;</span>
               <strong class="social-name">X/Twitter</strong>
             </a>
             <a href="https://t404null.bandcamp.com/">
