--- a/release/hello.world(Zer/O)/index.html
+++ b/release/hello.world(Zer/O)/index.html
@@ -23,7 +23,10 @@ Bandcamp">
       <ul class="menu">
         <li>
           <a href="/">
-            <img src="https://cdn.glitch.global/f594d6b7-e72e-477c-b5cb-d71abbd39f44/logo.png?v=1716494259675" alt="t404:null" />
+            <img
+              src="https://cdn.glitch.global/f594d6b7-e72e-477c-b5cb-d71abbd39f44/logo.png?v=1716494259675"
+              alt="t404:null"
+            />
           </a>
         </li>
         <li>
@@ -81,7 +84,7 @@ Bandcamp">
         </li>
         <li class="social">
           <a href="https://x.com/t404_null">
-            <p>&Xopf;</p>
+            <p class="nf-icons">&#xe8e9;</p>
           </a>
         </li>
         <li class="social">
@@ -110,8 +113,11 @@ Bandcamp">
           </a>
         </li>
         <li>
-          <button class="burger" onclick="this.classList.toggle('open');
-                                document.querySelector('.dropdown').classList.toggle('dropdown-open');">
+          <button
+            class="burger"
+            onclick="this.classList.toggle('open');
+                                document.querySelector('.dropdown').classList.toggle('dropdown-open');"
+          >
             <div id="hamburger">
               <span></span>
               <span></span>
@@ -165,7 +171,7 @@ Bandcamp">
               <strong class="social-name">Youtube</strong>
             </a>
             <a href="https://x.com/t404_null">
-              <span class="icons"> &Xopf; </span>
+              <span class="icons nf-icons">&#xe8e9;</span>
               <strong class="social-name">X/Twitter</strong>
             </a>
             <a href="https://t404null.bandcamp.com/">
