--- a/release/Oblitus_Requiem/index.html
+++ b/release/Oblitus_Requiem/index.html
@@ -79,7 +79,7 @@ and more...">
         </li>
         <li class="social">
           <a href="https://x.com/t404_null">
-            <p class="nf-icons">&#xe8e9;</p>
+            <p class="nf-icons">&#xe8c9;</p>
           </a>
         </li>
         <li class="social">
@@ -166,7 +166,7 @@ and more...">
               <strong class="social-name">Youtube</strong>
             </a>
             <a href="https://x.com/t404_null">
-              <span class="icons nf-icons">&#xe8e9;</span>
+              <span class="icons nf-icons">&#xe8c9;</span>
               <strong class="social-name">X/Twitter</strong>
             </a>
             <a href="https://t404null.bandcamp.com/">
