--- a/release/hello.world(Zer/O)/index.html
+++ b/release/hello.world(Zer/O)/index.html
@@ -84,7 +84,7 @@ Bandcamp">
         </li>
         <li class="social">
           <a href="https://x.com/t404_null">
-            <p class="nf-icons">&#xe8e9;</p>
+            <p class="nf-icons">&#xe8c9;</p>
           </a>
         </li>
         <li class="social">
@@ -171,7 +171,7 @@ Bandcamp">
               <strong class="social-name">Youtube</strong>
             </a>
             <a href="https://x.com/t404_null">
-              <span class="icons nf-icons">&#xe8e9;</span>
+              <span class="icons nf-icons">&#xe8c9;</span>
               <strong class="social-name">X/Twitter</strong>
             </a>
             <a href="https://t404null.bandcamp.com/">
