--- a/release/index.html
+++ b/release/index.html
@@ -73,7 +73,7 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
         </li>
         <li class="social">
           <a href="https://x.com/t404_null">
-            <p class="nf-icons">&#xe8e9;</p>
+            <p class="nf-icons">&#xe8c9;</p>
           </a>
         </li>
         <li class="social">
@@ -160,7 +160,7 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
               <strong class="social-name">Youtube</strong>
             </a>
             <a href="https://x.com/t404_null">
-              <span class="icons nf-icons">&#xe8e9;</span>
+              <span class="icons nf-icons">&#xe8c9;</span>
               <strong class="social-name">X/Twitter</strong>
             </a>
             <a href="https://t404null.bandcamp.com/">
