Made highlights to start dyamically

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
     <link rel="icon" type="image/x-icon" href="https://cdn.glitch.global/2d9e31c1-a947-46cd-9fd2-8c92be70abe2/t404_null%20Icon.png" />
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css" />
+    <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+<script>eruda.init();</script>
+
   </head>
   <body>
     <nav>
