Updated syntaxes order a bit

--- a/release/index.html
+++ b/release/index.html
@@ -192,46 +192,8 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
     <main class= "main-page">
       <h1 class="topic">Releases</h1>
       <div class="album-cards">
-        <a class="card" href="/release/hello.world(Zer/O)">
-          <div class="bg-img" style="
-              background-image: url(https://t404null.glitch.me/assets/images/image0.png);
-            "></div>
-          <h2>hello.world(Zer/O)</h2>
-          <p>First Release</p>
-          <p>What do I see... a new world...?</p>
-        </a>
-        <a class="card" href="/release">
-          <div class="bg-img" style="
-              background-image: url(https://cdn.glitch.me/f6cb427c-2cdb-4693-bc00-9d3e2991008c%2FC9B955D3-3A2A-4B83-92EB-EBCBDEB2B458.jpeg);
-            "></div>
-          <h2>PoΣΣεssion (Possession)</h2>
-          <p>Formerly "Mayonaka Dancehall!!!" (:DACHiTRAX) Release.</p>
-          <p>Ghost and monsters are gathering you...</p>
-        </a>
-        <a class="card" href="/release">
-          <div class="bg-img" style="
-              background-image: url(https://cdn.glitch.global/2d9e31c1-a947-46cd-9fd2-8c92be70abe2/Hyper_Limimality.png);
-            "></div>
-          <h2>Hyper Liminality</h2>
-          <p>t404:null &amp; trung-nova &amp; AXiS</p>
-          <p>"until you reach it... the two hyper sides."</p>
-        </a>
-        <a class="card" href="/release/A_Lake_With_Endless_Stars">
-          <div class="bg-img" style="
-              background-image: url(https://cdn.glitch.global/2d9e31c1-a947-46cd-9fd2-8c92be70abe2/A_Lake_With_Endless_Stars.png);
-            "></div>
-          <h2>A Lake With Endless Stars</h2>
-          <p> "Under the coruscating night sky, gaze into the kaleidoscopic waters..." </p>
-        </a>
-        <a class="card" href="/release/Oblitus_Requiem">
-          <div class="bg-img" style="
-              background-image: url(https://cdn.glitch.global/f594d6b7-e72e-477c-b5cb-d71abbd39f44/oblitus-requiem.png);
-            "></div>
-          <h2>Oblitus Requiem \\Against the Forsaken Legacy//</h2>
-          <p>VNMC2023 Grand Finals Tiebreaker.</p>
-          <p> "Even if you don't remember me now, I will bring the you I once knew back from them." </p>
-        </a>
       </div>
+      <script src="/assets/js/index.js" type="module"></script>
     </main>
     <div class="footer">&copy; t404:null 2021-2024 - All Rights Reserved</div>
   </body>
