Added Release Page

--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>t404:null | Home</title>
-    <meta name="description" content="Hello there! I'm t404:null (a.k.a t404owo).
-I write/make/produce EDM music(DTM), and for every releases I'll post my music on this website. If you have any requests or questions, feel free contact me." />
-    <link rel="icon" type="image/x-icon" href="https://cdn.glitch.global/2d9e31c1-a947-46cd-9fd2-8c92be70abe2/t404_null%20Icon.png" />
+    <title>t404:null</title>
+    <meta
+      name="description"
+      content="Hello there! I'm t404:null (a.k.a t404owo).
+I write/make/produce EDM music(DTM), and for every releases I'll post my music on this website. If you have any requests or questions, feel free contact me."
+    />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://cdn.glitch.global/2d9e31c1-a947-46cd-9fd2-8c92be70abe2/t404_null%20Icon.png"
+    />
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css" />
     <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
-<script>eruda.init();</script>
-
+    <script>
+      eruda.init();
+    </script>
   </head>
   <body>
     <nav>
@@ -197,8 +205,7 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
       <div class="container">
         <div class="carousel">
           <div class="slider-bg"></div>
-          <div class="slider" id="pages">
-          </div>
+          <div class="slider" id="pages"></div>
           <div class="control">
             <span class="prev">&lt;</span>
             <span class="next">&gt;</span>
@@ -212,16 +219,15 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
       <h1 class="topic">
         <a href="/release">Releases (Click for more)</a>
       </h1>
-      <div class="album-cards">
-      </div>
+      <div class="album-cards"></div>
       <hr />
       <h1 class="topic">
         <a href="/activity">Activities</a>
       </h1>
-      <div class="half-image-cards">
-      </div>
+      <div class="half-image-cards"></div>
     </main>
-    <script src="/assets/js/index.js" type="module"></script>
     <div class="footer">&copy; t404:null 2021-2024 - All Rights Reserved</div>
   </body>
+
+  <script src="/assets/js/index.js" type="module"></script>
 </html>
