added contact form (rework soon)

--- a/contacts/index.html
+++ b/contacts/index.html
@@ -220,6 +220,20 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
           </a>
         </li>
       </ul>
+      <hr />
+      <div class="contact-email">
+        <form method="POST" class="form">
+                <label for="email">Email:</label>
+                <input type="email" name="email" class="inputbox" placeholder="Email" autocomplete="email" required>
+                <br>
+                <label for="password">Password:</label>
+                <input type="password" name="password" class="inputbox" placeholder="Password" autocomplete="password" required>
+                <br><br>
+                <input type="hidden" name="_token" value="$get_token">
+                <!-- div class="error_box" /div-->
+                <button type="submit" class="formbutton">Login</button>
+          </form>
+      </div>
     </main>
     <div class="footer">&copy; t404:null 2021-2024 - All Rights Reserved</div>
   </body>
