updated pass to subject xD

--- a/contacts/index.html
+++ b/contacts/index.html
@@ -226,8 +226,8 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
                 <label for="email">Email:</label>
                 <input type="email" name="email" class="inputbox" placeholder="Email" autocomplete="email" required>
                 <br>
-                <label for="password">Password:</label>
-                <input type="password" name="password" class="inputbox" placeholder="Password" autocomplete="password" required>
+                <label for="subject">Password:</label>
+                <input type="text" name="subject" class="inputbox" placeholder="Subject" required>
                 <br><br>
                 <!-- div class="error_box" /div-->
                 <button type="submit" class="formbutton">Login</button>
