--- a/contacts/index.html
+++ b/contacts/index.html
@@ -223,12 +223,19 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
       <hr />
       <div class="contact-email">
         <form method="POST" class="form">
+                <label for="name">Subject:</label>
+                <input type="text" name="name" class="inputbox" placeholder="Name" required>
+                <br>
                 <label for="email">Email:</label>
                 <input type="email" name="email" class="inputbox" placeholder="Email" autocomplete="email" required>
                 <br>
-                <label for="subject">Password:</label>
+                <label for="subject">Subject:</label>
                 <input type="text" name="subject" class="inputbox" placeholder="Subject" required>
-                <br><br>
+                <br>
+                <label for="message">Message:</label>
+                <textarea type="text" name="message" class="inputbox" placeholder="Message" required> </textarea>
+                <br>
+                <br>
                 <!-- div class="error_box" /div-->
                 <button type="submit" class="formbutton">Login</button>
           </form>
