made the text not too serious to delight my client ofc ;D Some form edit b4 CSS and JS involved....

--- a/contacts/index.html
+++ b/contacts/index.html
@@ -224,16 +224,16 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
       <div class="contact-email">
         <form method="POST" class="form">
                 <label for="name">Subject:</label>
-                <input type="text" name="name" class="inputbox" placeholder="Name" required>
+                <input type="text" name="name" class="inputbox" placeholder="Your Name" required>
                 <br>
                 <label for="email">Email:</label>
-                <input type="email" name="email" class="inputbox" placeholder="Email" autocomplete="email" required>
+                <input type="email" name="email" class="inputbox" placeholder="your.email@here.please" autocomplete="email" required>
                 <br>
                 <label for="subject">Subject:</label>
-                <input type="text" name="subject" class="inputbox" placeholder="Subject" required>
+                <input type="text" name="subject" class="inputbox" placeholder="Your topic here ;)" required>
                 <br>
                 <label for="message">Message:</label>
-                <textarea type="text" name="message" class="inputbox" placeholder="Message" required> </textarea>
+                <textarea type="text" name="message" class="inputbox" placeholder="Message here." required> </textarea>
                 <br>
                 <br>
                 <!-- div class="error_box" /div-->
