Updated serveral stuffs JS: added for Empty slots a msg (user request). Updated copyright and ToS/ToU for my tracks / properties.

--- a/index.html
+++ b/index.html
@@ -219,14 +219,18 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
       <h1 class="topic">
         <a href="/release">Releases (Click for more)</a>
       </h1>
-      <div class="album-cards"></div>
+      <div class="album-cards">
+        Nothing here yet. ;D
+      </div>
       <hr />
       <h1 class="topic">
         <a href="/activity">Activities</a>
       </h1>
-      <div class="half-image-cards"></div>
+      <div class="half-image-cards">
+        Nothing here yet. ;D
+      </div>
     </main>
-    <div class="footer">&copy; t404:null 2021-2024 - All Rights Reserved</div>
+    <div class="footer">&copy; t404:null 2021-2025 - All Rights Reserved</div>
   </body>
 
   <script src="/assets/js/index.js" type="module"></script>
