--- a/song_usage_terms/index.html
+++ b/song_usage_terms/index.html
@@ -202,23 +202,33 @@
           <div class="long-br"></div> All use of the music/track(s)/song(s) is at your own risk. I'm not responsible for any damage, problems caused by your use of my music/track(s)/song(s) and won't be involved in by any way.
         </li>
         <li>
-          <strong class="title">1.) In the case if you want to use my song(s) / track(s) as a corporation / a company</strong>
-          <br /> If you wish to use my song as a corporation / a company, no matter how you use it, please contact me and get confirmation at one of the following email address(es): <br />
-          <a href="mailto:t404.null@gmail.com" class="text-info">t404.null@gmail.com</a>
-          <br />
-          <a href="mailto:t404owo@gmail.com" class="text-info">t404owo@gmail.com</a>
-          <br />
-          <a href="mailto:tags4owo@gmail.com" class="text-info">tags4owo@gmail.com</a>
-        </li>
-        <li>
-          <div class="subdiv">
-            <strong class="title">1.1.) In the case if you want to use my song(s) / track(s) as an educational institution or a volunteer organization / a company for volunteer</strong>
-            <br /> You are allowed use my songs as well as individuals. <br /> If you can, it would be (very) helpful for me if you could confirm it once in the following email adress(es): <br />
+          <strong class="title">1.) In the case if you want to use my song(s) / track(s) as a corporation / a company material</strong>
+          <br /> If you wish to use my song as a corporation / a company material, no matter how you use it, please contact me and get confirmation at one of the following email address(es): <br />
+          <a href="mailto:request@t404null.com" class="text-info">request@t404null.com</a>
+            <br /><br />
+            Or:
+            <br />
             <a href="mailto:t404.null@gmail.com" class="text-info">t404.null@gmail.com</a>
             <br />
             <a href="mailto:t404owo@gmail.com" class="text-info">t404owo@gmail.com</a>
             <br />
             <a href="mailto:tags4owo@gmail.com" class="text-info">tags4owo@gmail.com</a>
+            <br />
+        </li>
+        <li>
+          <div class="subdiv">
+            <strong class="title">1.1.) In the case if you want to use my song(s) / track(s) as an educational institution or a volunteer organization / a company for volunteer</strong>
+            <br /> You are allowed use my songs as well as individuals. <br /> If you can, it would be (very) helpful for me if you could confirm it once in the following email adress(es): <br />
+            <a href="mailto:info@t404null.com" class="text-info">info@t404null.com</a>
+            <br /><br />
+            Or:
+            <br />
+            <a href="mailto:t404.null@gmail.com" class="text-info">t404.null@gmail.com</a>
+            <br />
+            <a href="mailto:t404owo@gmail.com" class="text-info">t404owo@gmail.com</a>
+            <br />
+            <a href="mailto:tags4owo@gmail.com" class="text-info">tags4owo@gmail.com</a>
+            <br />
             <br /> Please note that this is intended primarily, but not exclusively, for educational institutions related to music.
           </div>
         </li>
@@ -254,6 +264,10 @@
           <div class="subdiv">
             <strong class="title">3.2.) If you want to distribute the music as an official chart / official music for a rhythm game (in short, if you're a developer/offical charter/owner of that game) or if you want to use my song/track as a BGM that is included for a program / a game or its directory</strong>
             <br /> Please contact me at one of the following email address(es): <br />
+            <a href="mailto:request@t404null.com" class="text-info">request@t404null.com</a>
+            <br /><br />
+            Or:
+            <br />
             <a href="mailto:t404.null@gmail.com" class="text-info">t404.null@gmail.com</a>
             <br />
             <a href="mailto:t404owo@gmail.com" class="text-info">t404owo@gmail.com</a>
@@ -266,6 +280,10 @@
           <div class="dubdiv">
             <strong class="title">3.3.) If you want to repost my song</strong>
             <br /> Please contact me at one of the following email address(es): <br />
+            <a href="mailto:request@t404null.com" class="text-info">request@t404null.com</a>
+            <br /><br />
+            Or:
+            <br />
             <a href="mailto:t404.null@gmail.com" class="text-info">t404.null@gmail.com</a>
             <br />
             <a href="mailto:t404owo@gmail.com" class="text-info">t404owo@gmail.com</a>
@@ -277,6 +295,10 @@
         <li>
           <strong class="title">4.) Other Uses</strong>
           <br /> Please contact me at one of the following email address(es): <br />
+          <a href="mailto:info@t404null.com" class="text-info">info@t404null.com</a>
+          <br /><br />
+          Or:
+          <br />
           <a href="mailto:t404.null@gmail.com" class="text-info">t404.null@gmail.com</a>
           <br />
           <a href="mailto:t404owo@gmail.com" class="text-info">t404owo@gmail.com</a>
@@ -284,9 +306,9 @@
           <a href="mailto:tags4owo@gmail.com" class="text-info">tags4owo@gmail.com</a>
           <br />
         </li>
-        <div class="long-br"></div> &copy; t404:null 2021-2024 - All Rights Reserved.
+        <div class="long-br"></div> &copy; t404:null 2021-2025 - All Rights Reserved.
       </ul>
     </main>
-    <div class="footer">&copy; t404:null 2021-2024 - All Rights Reserved</div>
+    <div class="footer">&copy; t404:null 2021-2025 - All Rights Reserved</div>
   </body>
 </html>
