replaced login submit...

--- a/contacts/index.html
+++ b/contacts/index.html
@@ -237,7 +237,7 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
                 <br>
                 <br>
                 <!-- div class="error_box" /div-->
-                <button type="submit" class="formbutton">Login</button>
+                <button type="submit" class="formbutton">Submit</button>
           </form>
       </div>
     </main>
