--- a/release/index.html
+++ b/release/index.html
@@ -192,6 +192,7 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
     <main class= "main-page">
       <h1 class="topic">Releases</h1>
       <div class="album-cards">
+        Nothing here yet. ;D
       </div>
       <script src="/assets/js/index.js" type="module"></script>
     </main>
