some cosmetics fix ;D

--- a/contacts/index.html
+++ b/contacts/index.html
@@ -200,6 +200,12 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
         <li>
           <strong class="title" style="color:#555"><b class="nf-icons icons">&#xf42f;</b> Email</strong>
           <p class="desc">
+            <a href="mailto:info@t404null.com" class="text-info">info@t404null.com</a>
+            <br />
+            <a href="mailto:request@t404null.com" class="text-info">request@t404null.com</a>
+            <br />
+            <a href="mailto:t404.null@t404null.com" class="text-info">t404.null@t404null.com</a>
+            <br /><br />Or:<br />
             <a href="mailto:t404.null@gmail.com" class="text-info">t404.null@gmail.com</a>
             <br />
             <a href="mailto:t404owo@gmail.com" class="text-info">t404owo@gmail.com</a>
@@ -221,6 +227,9 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
         </li>
       </ul>
       <hr />
+      <h1 class="topic">
+        (Or) Contact me here
+      </h1>
       <div class="contact-email">
         <form method="POST" class="form">
                 <label for="name">Subject:</label>
@@ -233,7 +242,7 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
                 <input type="text" name="subject" class="inputbox" placeholder="Your topic here ;)" required>
                 <br>
                 <label for="message">Message:</label>
-                <textarea type="text" name="message" class="inputbox" placeholder="Message here." required> </textarea>
+                <textarea type="text" name="message" class="inputbox" placeholder="Message here." required></textarea>
                 <br>
                 <br>
                 <!-- div class="error_box" /div-->
