--- a/song_usage_terms/index.html
+++ b/song_usage_terms/index.html
@@ -205,7 +205,7 @@
           <strong class="title">1.) In the case if you want to use my song(s) / track(s) as a corporation / a company material</strong>
           <br /> If you wish to use my song as a corporation / a company material, no matter how you use it, please contact me and get confirmation at one of the following email address(es): <br />
           <a href="mailto:request@t404null.com" class="text-info">request@t404null.com</a>
-            <br /><br />
+            <div class="long-br"></div>
             Or:
             <br />
             <a href="mailto:t404.null@gmail.com" class="text-info">t404.null@gmail.com</a>
@@ -220,7 +220,7 @@
             <strong class="title">1.1.) In the case if you want to use my song(s) / track(s) as an educational institution or a volunteer organization / a company for volunteer</strong>
             <br /> You are allowed use my songs as well as individuals. <br /> If you can, it would be (very) helpful for me if you could confirm it once in the following email adress(es): <br />
             <a href="mailto:info@t404null.com" class="text-info">info@t404null.com</a>
-            <br /><br />
+            <div class="long-br"></div>
             Or:
             <br />
             <a href="mailto:t404.null@gmail.com" class="text-info">t404.null@gmail.com</a>
@@ -265,7 +265,7 @@
             <strong class="title">3.2.) If you want to distribute the music as an official chart / official music for a rhythm game (in short, if you're a developer/offical charter/owner of that game) or if you want to use my song/track as a BGM that is included for a program / a game or its directory</strong>
             <br /> Please contact me at one of the following email address(es): <br />
             <a href="mailto:request@t404null.com" class="text-info">request@t404null.com</a>
-            <br /><br />
+            <div class="long-br"></div>
             Or:
             <br />
             <a href="mailto:t404.null@gmail.com" class="text-info">t404.null@gmail.com</a>
@@ -281,7 +281,7 @@
             <strong class="title">3.3.) If you want to repost my song</strong>
             <br /> Please contact me at one of the following email address(es): <br />
             <a href="mailto:request@t404null.com" class="text-info">request@t404null.com</a>
-            <br /><br />
+            <div class="long-br"></div>
             Or:
             <br />
             <a href="mailto:t404.null@gmail.com" class="text-info">t404.null@gmail.com</a>
@@ -296,7 +296,7 @@
           <strong class="title">4.) Other Uses</strong>
           <br /> Please contact me at one of the following email address(es): <br />
           <a href="mailto:info@t404null.com" class="text-info">info@t404null.com</a>
-          <br /><br />
+          <div class="long-br"></div>
           Or:
           <br />
           <a href="mailto:t404.null@gmail.com" class="text-info">t404.null@gmail.com</a>
