fixed X icons thingy...

--- a/contacts/index.html
+++ b/contacts/index.html
@@ -221,7 +221,7 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
             </a>
         </li>
         <li><a href="https://x.com/t404_null" style="color:black; background: none">
-          <strong class="title"><b class="icons">&Xopf;</b> X / Twitter</strong>
+          <strong class="title"><b class="nf-icons icons">&#xe8c9;</b> X / Twitter</strong>
           <p class="desc">@t404_null</p>
           </a>
         </li>
