--- a/contacts/index.html
+++ b/contacts/index.html
@@ -7,6 +7,7 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
     <link rel="icon" type="image/x-icon" href="https://cdn.glitch.global/2d9e31c1-a947-46cd-9fd2-8c92be70abe2/t404_null%20Icon.png" />
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css" />
+    <script src="/assets/js/mail.js" type="module"></script>
   </head>
   <body>
     <nav>
@@ -231,7 +232,7 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
         (Or) Contact me here
       </h1>
       <div class="contact-email">
-        <form method="POST" class="form">
+        <form method="POST" class="form" id="mail-form">
                 <label for="name">Subject:</label>
                 <input type="text" name="name" class="inputbox" placeholder="Your Name" required>
                 <br>
@@ -245,7 +246,7 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
                 <textarea type="text" name="message" class="inputbox" placeholder="Message here." required></textarea>
                 <br>
                 <br>
-                <!-- div class="error_box" /div-->
+                <div class="box"></div>
                 <button type="submit" class="formbutton">Submit</button>
           </form>
       </div>
