--- a/contacts/index.html
+++ b/contacts/index.html
@@ -234,16 +234,16 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
       <div class="contact-email">
         <form method="POST" class="form" id="mail-form">
                 <label for="name">Subject:</label>
-                <input type="text" name="name" class="inputbox" placeholder="Your Name" required>
+                <input type="text" name="name" id="name" class="inputbox" placeholder="Your Name" required>
                 <br>
                 <label for="email">Email:</label>
-                <input type="email" name="email" class="inputbox" placeholder="your.email@here.please" autocomplete="email" required>
+                <input type="email" name="email" id="email" class="inputbox" placeholder="your.email@here.please" autocomplete="email" required>
                 <br>
                 <label for="subject">Subject:</label>
-                <input type="text" name="subject" class="inputbox" placeholder="Your topic here ;)" required>
+                <input type="text" name="subject" id="subject" class="inputbox" placeholder="Your topic here ;)" required>
                 <br>
                 <label for="message">Message:</label>
-                <textarea type="text" name="message" class="inputbox" placeholder="Message here." required></textarea>
+                <textarea type="text" name="message" id="message" class="inputbox" placeholder="Message here." required></textarea>
                 <br>
                 <br>
                 <div class="box"></div>
