Site metadata update

--- a/activity/index.html
+++ b/activity/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>t404:null | Home</title>
+    <title>t404:null | Activities / Previous Events</title>
     <meta
       name="description"
       content="Hello there! I'm t404:null (a.k.a t404owo).
