--- a/contacts/index.html
+++ b/contacts/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>t404:null | Home</title>
+    <title>t404:null | Contacts</title>
     <meta name="description" content="Hello there! I'm t404:null (a.k.a t404owo).
-I write/make/produce EDM music(DTM), and for every releases I'll post my music on this website. If you have any requests or questions, feel free contact me." />
+
+Here is my contact list. Feel free to contact me in case you need anything in my reach ;)" />
     <link rel="icon" type="image/x-icon" href="https://cdn.glitch.global/2d9e31c1-a947-46cd-9fd2-8c92be70abe2/t404_null%20Icon.png" />
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css" />
