--- a/song_usage_terms/index.html
+++ b/song_usage_terms/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>t404:null | Home</title>
+    <title>t404:null | Usage of my song(s) / track(s)</title>
     <meta name="description" content="Hello there! Please be friendly and read this ”terms of using my songs” before using my(t404:null's) song for any purposes." />
     <link rel="icon" type="image/x-icon" href="https://cdn.glitch.global/2d9e31c1-a947-46cd-9fd2-8c92be70abe2/t404_null%20Icon.png" />
     <meta charset="UTF-8" />
