--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
     />
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css" />
+    <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+    <script>
+      eruda.init();
+    </script>
   </head>
   <body>
     <nav>
