Change label from 'Subject' to 'Name'

--- a/contacts/index.html
+++ b/contacts/index.html
@@ -234,7 +234,7 @@ Here is my contact list. Feel free to contact me in case you need anything in my
       </h1>
       <div class="contact-email">
         <form method="POST" class="form" id="mail-form">
-                <label for="name">Subject:</label>
+                <label for="name">Name:</label>
                 <input type="text" name="name" id="name" class="inputbox" placeholder="Your Name" required>
                 <br>
                 <label for="email">Email:</label>
