Change form to use POST method for mail form

--- a/contacts/index.html
+++ b/contacts/index.html
@@ -233,7 +233,7 @@ Here is my contact list. Feel free to contact me in case you need anything in my
         (Or) Contact me here
       </h1>
       <div class="contact-email">
-        <form class="form" id="mail-form">
+        <form method="POST" class="form" id="mail-form">
                 <label for="name">Name:</label>
                 <input type="text" name="name" id="name" class="inputbox" placeholder="Your Name" required>
                 <br>
