Add eruda script for debugging in index.html

--- a/contacts/index.html
+++ b/contacts/index.html
@@ -9,6 +9,7 @@ Here is my contact list. Feel free to contact me in case you need anything in my
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css" />
     <script src="/assets/js/mail.js" type="module"></script>
+    <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
   </head>
   <body>
     <nav>
