Include Supabase JS library in index.html
Added Supabase JavaScript library script tag.

--- a/release/index.html
+++ b/release/index.html
@@ -6,6 +6,7 @@
 I write/make/produce EDM music(DTM), and for every releases I'll post my music on this website. If you have any requests or questions, feel free contact me." />
     <link rel="icon" type="image/x-icon" href="https://cdn.glitch.global/2d9e31c1-a947-46cd-9fd2-8c92be70abe2/t404_null%20Icon.png" />
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css" />
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@latest"></script>
   </head>
   <body>
     <nav>
